update see restaurant admin

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -1626,3 +1626,10 @@ h3.footer__contact__title {
         height: 40%;
     }
 }
+
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
